--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body{
             background-image: url(p.gif);
+            background-size: cover;
         }
         .calculator{
             max-width: 400px;
