--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background-size: cover;
         }
         .calculator{
+            background-color: #ddd;
             max-width: 400px;
             margin: 50px auto;
             padding: 20px;
